CONF: put preferred version of libdrm on comment
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/sti-96bc2.conf
+++ b/conf/machine/sti-96bc2.conf
@@ -95,7 +95,7 @@ PREFERRED_PROVIDER_console-tools ?= "kbd"
 # =========================================================================
 # Version
 # =========================================================================
-PREFERRED_VERSION_libdrm = "2.4.65"
+#PREFERRED_VERSION_libdrm = "2.4.67"
 
 # =========================================================================
 # bluetooth addons
