--- a/conf/machine/sti-96bc2.conf
+++ b/conf/machine/sti-96bc2.conf
@@ -6,26 +6,22 @@
 # =========================================================================
 # Chip architecture
 # =========================================================================
-DEFAULTTUNE = "cortexa9thf-neon"
-include conf/machine/include/tune-cortexa9.inc
+require conf/machine/include/tune-cortexa9.inc
 
 # =========================================================================
 # Machine settings
 # =========================================================================
 # Default machine feature
-MACHINE_FEATURES = "usbhost"
-MACHINE_FEATURES =+ "bluetooth"
-MACHINE_FEATURES =+ "wifi"
+MACHINE_FEATURES = "usbhost usbgadget alsa screen bluetooth wifi ext2"
 
 # Default serial consoles (TTYs) to enable using getty
 SERIAL_CONSOLES = "115200;ttyAS1"
 
 # Ship all kernel by default
 MACHINE_EXTRA_RRECOMMENDS = " \
-    kernel                    \
-    kernel-base               \
-    kernel-image              \
     kernel-modules            \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'bluetooth', 'rtl8723bu', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
     "
 # =========================================================================
 # Xserver
@@ -33,10 +29,8 @@ MACHINE_EXTRA_RRECOMMENDS = " \
 XSERVER ?= " \
     xserver-xorg \
     xserver-xorg-module-libint10 \
-    xf86-video-modesetting \
     xf86-input-evdev \
-    xf86-input-mouse \
-    xf86-input-keyboard \
+    xf86-video-modesetting \
 "
 
 # =========================================================================
@@ -45,33 +39,20 @@ XSERVER ?= " \
 IMAGE_FSTYPES_append = " ext4"
 
 # =========================================================================
-# Package configuration
-# =========================================================================
-# Force the lgpl functionnality usage for libav
-PACKAGECONFIG_pn-gstreamer1.0-libav = " lgpl "
-
-# =========================================================================
 # Kernel
 # =========================================================================
-# Select default kernel version
-# NOTE: this setting should be done in machine.conf file itself
-LINUXLIBCVERSION                  = "4.6"
 PREFERRED_PROVIDER_virtual/kernel = "linux-sti"
 PREFERRED_VERSION_linux-sti       = "4.6"
 
 # Kernel image type
 KERNEL_IMAGETYPE     =  "uImage"
-KERNEL_ALT_IMAGETYPE =  " Image "
-KERNEL_ALT_IMAGETYPE =+ " vmlinux "
+KERNEL_ALT_IMAGETYPE = " vmlinux "
 
 # Kernel loadaddr
 STM_KERNEL_LOADADDR  = "0x40008000"
 
 # List of device tree to install
-KERNEL_DEVICETREE =  ""
-KERNEL_DEVICETREE =+ " stih407-b2120.dtb "
-KERNEL_DEVICETREE =+ " stih410-b2120.dtb "
-KERNEL_DEVICETREE =+ " stih410-b2260.dtb "
+KERNEL_DEVICETREE = " stih410-b2260.dtb "
 
 # =========================================================================
 # Kernel COMMAND LINE
@@ -80,25 +61,7 @@ KERNEL_DEVICETREE =+ " stih410-b2260.dtb "
 #   ##MEMORY##: key work will should be replaced by content of KERNEL_CMDLINE_MEMORY
 # =========================================================================
 KERNEL_CMDLINE_MEMORY = "mem=1024M@0x40000000"
-KERNEL_CMDLINE = "console=ttyAS1,115200 CONSOLE=/dev/ttyAS1 consoleblank=0 root=##ROOT## rootfstype=ext4 rw rootwait ${KERNEL_CMDLINE_MEMORY} vmalloc=256m video=HDMI-A-1:1920x1080 "
+KERNEL_CMDLINE = "console=ttyAS1,115200 CONSOLE=/dev/ttyAS1 consoleblank=0 root=##ROOT## rootfstype=ext4 rw rootwait ${KERNEL_CMDLINE_MEMORY} vmalloc=256m  "
 KERNEL_CMDLINE_DEV_APPEND = "clk_ignore_unused"
-
-
-# =========================================================================
-# Provider
-# =========================================================================
-# for openvt tools
-PREFERRED_PROVIDER_console-tools ?= "kbd"
-# =========================================================================
-# Version
-# =========================================================================
-#PREFERRED_VERSION_libdrm = "2.4.67"
-
-# =========================================================================
-# bluetooth addons
-# =========================================================================
-IMAGE_INSTALL_append = " ${@bb.utils.contains('MACHINE_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} "
-IMAGE_INSTALL_append = " ${@bb.utils.contains('MACHINE_FEATURES', 'bluetooth', 'rtl8723bu', '', d)} "
-
 
 
