Change name of machine to stih410-b2260
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -1,5 +1,5 @@
 #@TYPE: Machine
-#@NAME: sti-96c2
+#@NAME: stih410-b2260
 #@DESCRIPTION: Machine configuration for ST Cannes2  systems to build with Linux-STI Kernel 4.6 support
 
 
