CONF: add bluetooth tools
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -20,9 +20,11 @@ SERIAL_CONSOLES = "115200;ttyAS1"
 # Ship all kernel by default
 MACHINE_EXTRA_RRECOMMENDS = " \
     kernel-modules            \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'bluetooth', 'rtl8723bu', '', d)} \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
+    rtl8723bu                 \
+    linux-firmware-rtl8723bu  \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'bluez5', 'bluez5', '', d)} \
     "
+
 # =========================================================================
 # Xserver
 # =========================================================================
