CONF: add generation of ST image
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -2,7 +2,6 @@
 #@NAME: stih410-b2260
 #@DESCRIPTION: Machine configuration for ST Cannes2  systems to build with Linux-STI Kernel 4.6 support
 
-
 # =========================================================================
 # Chip architecture
 # =========================================================================
@@ -38,7 +37,9 @@ XSERVER ?= " \
 # =========================================================================
 # Image
 # =========================================================================
-IMAGE_FSTYPES_append = " ext4"
+# BSP default settings
+IMAGE_CLASSES += "image_types-st"
+IMAGE_FSTYPES_append = " ext4 stimg "
 
 # =========================================================================
 # Kernel
@@ -65,5 +66,4 @@ KERNEL_DEVICETREE = " stih410-b2260.dtb "
 KERNEL_CMDLINE_MEMORY = "mem=1024M@0x40000000"
 KERNEL_CMDLINE = "console=ttyAS1,115200 CONSOLE=/dev/ttyAS1 consoleblank=0 root=##ROOT## rootfstype=ext4 rw rootwait ${KERNEL_CMDLINE_MEMORY} vmalloc=256m  "
 KERNEL_CMDLINE_DEV_APPEND = "clk_ignore_unused"
-
 
