--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -52,7 +52,7 @@ KERNEL_IMAGETYPE     =  "uImage"
 KERNEL_ALT_IMAGETYPE = " vmlinux "
 
 # Kernel loadaddr
-STM_KERNEL_LOADADDR  = "0x40008000"
+ST_KERNEL_LOADADDR  = "0x40008000"
 
 # List of device tree to install
 KERNEL_DEVICETREE = " stih410-b2260.dtb "
