--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -21,7 +21,6 @@ MACHINE_EXTRA_RRECOMMENDS = " \
     kernel-modules            \
     ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'rtl8723bu', '', d)} \
     ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'bluez5', 'bluez5', '', d)} \
     "
 
 # =========================================================================
@@ -46,6 +45,8 @@ IMAGE_FSTYPES_append = " ext4 stimg "
 # =========================================================================
 PREFERRED_PROVIDER_virtual/kernel = "linux-sti"
 PREFERRED_VERSION_linux-sti       = "4.6"
+
+SERIAL_CONSOLE = "115200 ttyAS1"
 
 # Kernel image type
 KERNEL_IMAGETYPE     =  "uImage"
