CONF: correct issue with expansion of bb.utils.contains
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -20,8 +20,7 @@ SERIAL_CONSOLES = "115200;ttyAS1"
 MACHINE_EXTRA_RRECOMMENDS = " \
     kernel-modules            \
     ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'rtl8723bu', '', d)} \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', d)} \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'bluez5', 'bluez5', '', d)} \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
     "
 
 # =========================================================================
