CONF: add SERIAL_CONSOLE configuration
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -46,6 +46,8 @@ IMAGE_FSTYPES_append = " ext4 stimg "
 PREFERRED_PROVIDER_virtual/kernel = "linux-sti"
 PREFERRED_VERSION_linux-sti       = "4.6"
 
+SERIAL_CONSOLE = "115200 ttyAS1"
+
 # Kernel image type
 KERNEL_IMAGETYPE     =  "uImage"
 KERNEL_ALT_IMAGETYPE = " vmlinux "
