CONF: use compressed etx4 image
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -38,7 +38,7 @@ XSERVER ?= " \
 # =========================================================================
 # BSP default settings
 IMAGE_CLASSES += "image_types-st"
-IMAGE_FSTYPES_append = " ext4 stimg "
+IMAGE_FSTYPES_append = " ext4.gz stimg "
 
 # =========================================================================
 # Kernel
