--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -68,3 +68,9 @@ KERNEL_CMDLINE_MEMORY = "mem=1024M@0x40000000"
 KERNEL_CMDLINE = "console=ttyAS1,115200 CONSOLE=/dev/ttyAS1 consoleblank=0 root=##ROOT## rootfstype=ext4 rw rootwait ${KERNEL_CMDLINE_MEMORY} vmalloc=256m  "
 KERNEL_CMDLINE_DEV_APPEND = "clk_ignore_unused"
 
+# =========================================================================
+# U boot
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-sti"
+# Configuration
+UBOOT_CONFIG = "b2260"
+EXTRA_IMAGEDEPENDS += "u-boot-sti"
