CONF: rename of rtl8723bu
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -19,7 +19,7 @@ SERIAL_CONSOLES = "115200;ttyAS1"
 # Ship all kernel by default
 MACHINE_EXTRA_RRECOMMENDS = " \
     kernel-modules            \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'rtl8723bu', '', d)} \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'rtl8723bu-stih410-b2260', '', d)} \
     ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
     "
 
