CONF: add support of mali400
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,3 +13,7 @@ BBFILE_PRIORITY_st-cannes2 = "9"
 # Defines how BitBake handles situations where an append file (.bbappend) has no corresponding recipe file (.bb).
 #
 BB_DANGLINGAPPENDS_WARNONLY = "1"
+
+#--------------------------
+# Eula
+EULA_FILE_ST = "${LAYERDIR}/conf/eula/${MACHINE}"
