--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -6,6 +6,7 @@
 # Chip architecture
 # =========================================================================
 require conf/machine/include/tune-cortexa9.inc
+include conf/machine/include/gpu_mali.inc
 
 # =========================================================================
 # Machine settings
@@ -21,6 +22,8 @@ MACHINE_EXTRA_RRECOMMENDS = " \
     kernel-modules            \
     ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'rtl8723bu-stih410-b2260', '', d)} \
     ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'gpu', 'mali400-driver-stih410-b2260 ', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'gpu', '${GPU_USERLAND_LIBRARIES_INSTALL}', '', d)} \
     "
 
 # =========================================================================
@@ -74,3 +77,9 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-sti"
 # Configuration
 UBOOT_CONFIG = "b2260"
 EXTRA_IMAGEDEPENDS += "u-boot-sti"
+
+# =========================================================================
+# GPU
+# =========================================================================
+# if GPU (mali400) are activated and EULA is accepted
+MACHINE_FEATURES =+ "${@'gpu' if d.getVar('ACCEPT_EULA_'+d.getVar('MACHINE', True), True) == '1' else ''}"
