CONF: add support of optee
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -12,19 +12,10 @@ include conf/machine/include/gpu_mali.inc
 # Machine settings
 # =========================================================================
 # Default machine feature
-MACHINE_FEATURES = "usbhost usbgadget alsa screen bluetooth wifi ext2"
+MACHINE_FEATURES = "usbhost usbgadget alsa screen bluetooth wifi ext2 optee"
 
 # Default serial consoles (TTYs) to enable using getty
 SERIAL_CONSOLES = "115200;ttyAS1"
-
-# Ship all kernel by default
-MACHINE_EXTRA_RRECOMMENDS = " \
-    kernel-modules            \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'rtl8723bu-stih410-b2260', '', d)} \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'gpu', 'mali400-driver-stih410-b2260 ', '', d)} \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'gpu', '${GPU_USERLAND_LIBRARIES_INSTALL}', '', d)} \
-    "
 
 # =========================================================================
 # Xserver
@@ -83,3 +74,23 @@ EXTRA_IMAGEDEPENDS += "u-boot-sti"
 # =========================================================================
 # if GPU (mali400) are activated and EULA is accepted
 MACHINE_FEATURES =+ "${@'gpu' if d.getVar('ACCEPT_EULA_'+d.getVar('MACHINE', True), True) == '1' else ''}"
+
+# =========================================================================
+# OPTEE
+# =========================================================================
+OPTEE_IMAGE_INSTALL = "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'optee-os-b2260', '', d)} "
+PREFERRED_PROVIDER_optee-os = "optee-os-b2260"
+
+# =========================================================================
+# Installation
+# =========================================================================
+# Ship all kernel by default
+MACHINE_EXTRA_RRECOMMENDS = " \
+    kernel-modules            \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'rtl8723bu-stih410-b2260', '', d)} \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'gpu', 'mali400-driver-stih410-b2260 ', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'gpu', '${GPU_USERLAND_LIBRARIES_INSTALL}', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'optee', '${OPTEE_IMAGE_INSTALL}', '', d)} \
+    "
+
