KERNEL: adapt kernel systemd config to systemd 234 requirement
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/recipes-kernel/linux/linux-sti/4.12.2/systemd.config
+++ b/recipes-kernel/linux/linux-sti/4.12.2/systemd.config
@@ -43,5 +43,18 @@ CONFIG_TIMERFD=y
 CONFIG_EPOLL=y
 CONFIG_NET=y
 CONFIG_FHANDLE=y
-
-
+CONFIG_CRYPTO_USER_API_HASH=y
+CONFIG_CRYPTO_HMAC=y
+CONFIG_CRYPTO_SHA256=y
+# CONFIG_FW_LOADER_USER_HELPER is not set
+CONFIG_DMIID=y
+CONFIG_NET_NS=y
+CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+CONFIG_USER_NS=y
+CONFIG_IPV6=y
+CONFIG_TMPFS_XATTR=y
+CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_EXT4_POSIX_ACL=y
+CONFIG_CHECKPOINT_RESTORE=y
+CONFIG_CGROUP_SCHED=y
+CONFIG_FAIR_GROUP_SCHED=y
