WESTON-INIT: adapt weston-init to weston-2.0
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/recipes-graphics/wayland/weston-init/stih410-b2260/weston.ini
+++ b/recipes-graphics/wayland/weston-init/stih410-b2260/weston.ini
@@ -2,6 +2,7 @@
 shell=desktop-shell.so
 #modules=xwayland.so
 backend=drm-backend.so
+require-input=false
 idle-time=0
 
 # for azerty keyboard
@@ -12,6 +13,7 @@ idle-time=0
 background-image=/usr/share/weston/wallpaper_1920x1080.png
 background-color=0xff002244
 background-type=scale-crop
+clock-format=minutes
 panel-color=0x90a1a1a1
 locking=false
 animation=none
