--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -17,3 +17,8 @@ BB_DANGLINGAPPENDS_WARNONLY = "1"
 #--------------------------
 # Eula
 EULA_FILE_ST = "${LAYERDIR}/conf/eula/${MACHINE}"
+
+# This should only be incremented on significant changes that will
+# cause compatibility issues with other layers
+LAYERVERSION_st-cannes2 = "1"
+LAYERSERIES_COMPAT_st-cannes2 = "sumo"
