--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -24,6 +24,7 @@ MACHINE_EXTRA_RRECOMMENDS = " \
     ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-rtl8723bu', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'gpu', 'mali400-driver-stih410-b2260 ', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'gpu', '${GPU_USERLAND_LIBRARIES_INSTALL}', '', d)} \
+    linux-sti-firmware-fdma \
     "
 
 # =========================================================================
@@ -47,7 +48,7 @@ IMAGE_FSTYPES_append = " ext4.gz stimg "
 # Kernel
 # =========================================================================
 PREFERRED_PROVIDER_virtual/kernel = "linux-sti"
-PREFERRED_VERSION_linux-sti       = "4.17"
+PREFERRED_VERSION_linux-sti       = "4.18"
 
 SERIAL_CONSOLE = "115200 ttyAS1"
 
