--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,4 +21,4 @@ EULA_FILE_ST = "${LAYERDIR}/conf/eula/${MACHINE}"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_st-cannes2 = "1"
-LAYERSERIES_COMPAT_st-cannes2 = "sumo"
+LAYERSERIES_COMPAT_st-cannes2 = "thud"
