CONF: disable GPU
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -82,5 +82,7 @@ EXTRA_IMAGEDEPENDS += "u-boot-sti"
 # =========================================================================
 # GPU
 # =========================================================================
+# Issue with libmali No gpu alvailable
+GPU_USERLAND_LIBRARIES_WAYLAND = "mesa"
 # if GPU (mali400) are activated and EULA is accepted
-MACHINE_FEATURES =+ "${@'gpu' if d.getVar('ACCEPT_EULA_'+d.getVar('MACHINE', True), True) == '1' else ''}"
+#MACHINE_FEATURES =+ "${@'gpu' if d.getVar('ACCEPT_EULA_'+d.getVar('MACHINE', True), True) == '1' else ''}"
