--- a/recipes-kernel/linux/linux-sti/5.0/b2260.config
+++ b/recipes-kernel/linux/linux-sti/5.0/b2260.config
@@ -383,4 +383,10 @@ CONFIG_CRYPTO_CHACHA20_NEON=m
 CONFIG_CRC_ITU_T=m
 # CONFIG_MTD_SPI_NOR is not set
 
-
+# NFS support
+CONFIG_NFSD=m
+CONFIG_NFSD_V3_ACL=y
+CONFIG_NFSD_V4=y
+CONFIG_NFSD_BLOCKLAYOUT=y
+CONFIG_NFSD_SCSILAYOUT=y
+CONFIG_NFSD_FLEXFILELAYOUT=y
