WESTON: add weston configuration
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/recipes-graphics/wayland/weston-init/stih410-b2260/weston.ini
+++ b/recipes-graphics/wayland/weston-init/stih410-b2260/weston.ini
@@ -1,9 +1,9 @@
 [core]
 shell=desktop-shell.so
-#modules=xwayland.so
 backend=drm-backend.so
-require-input=false
 idle-time=0
+repaint-window=100
+require-input=false
 
 # for azerty keyboard
 #[keyboard]
