remove arm MALI usage
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/machine/stih410-b2260.conf
+++ b/conf/machine/stih410-b2260.conf
@@ -6,7 +6,6 @@
 # Chip architecture
 # =========================================================================
 require conf/machine/include/tune-cortexa9.inc
-include conf/machine/include/gpu_mali.inc
 
 # =========================================================================
 # Machine settings
@@ -48,7 +47,7 @@ IMAGE_FSTYPES_append = " ext4.gz stimg "
 # Kernel
 # =========================================================================
 PREFERRED_PROVIDER_virtual/kernel = "linux-sti"
-PREFERRED_VERSION_linux-sti       = "5.0"
+PREFERRED_VERSION_linux-sti       = "5.%"
 
 SERIAL_CONSOLE = "115200 ttyAS1"
 
@@ -79,10 +78,3 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-sti"
 UBOOT_CONFIG = "b2260"
 EXTRA_IMAGEDEPENDS += "u-boot-sti"
 
-# =========================================================================
-# GPU
-# =========================================================================
-# Issue with libmali No gpu alvailable
-GPU_USERLAND_LIBRARIES_WAYLAND = "mesa"
-# if GPU (mali400) are activated and EULA is accepted
-#MACHINE_FEATURES =+ "${@'gpu' if d.getVar('ACCEPT_EULA_'+d.getVar('MACHINE', True), True) == '1' else ''}"
