WESTON: update weston.ini
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/recipes-graphics/wayland/weston-init/stih410-b2260/weston.ini
+++ b/recipes-graphics/wayland/weston-init/stih410-b2260/weston.ini
@@ -5,8 +5,9 @@ idle-time=0
 repaint-window=100
 require-input=false
 
+[keyboard]
+keymap_layout=us
 # for azerty keyboard
-#[keyboard]
 #keymap_layout=fr
 
 [shell]
@@ -15,13 +16,20 @@ background-color=0xff002244
 background-type=scale-crop
 clock-format=minutes
 panel-color=0x90a1a1a1
+panel-position=bottom
 locking=false
 animation=none
-close-animation=none
 startup-animation=none
+close-animation=none
 focus-animation=none
 binding-modifier=ctrl
-num-workspaces=6
+#num-workspaces=6
+#cursor-theme=whiteglass
+#cursor-size=24
+
+#lockscreen-icon=/usr/share/icons/gnome/256x256/actions/lock.png
+#lockscreen=/usr/share/backgrounds/gnome/Garden.jpg
+#homescreen=/usr/share/backgrounds/gnome/Blinds.jpg
 
 [launcher]
 icon=/usr/share/weston/terminal.png
@@ -35,3 +43,28 @@ path=/usr/libexec/weston-keyboard
 name=HDMI-A-1
 mode=preferred
 
+[libinput]
+touchscreen_calibrator=true
+calibration_helper=/bin/echo
+#enable-tap=true
+#tap-and-drag=true
+#tap-and-drag-lock=true
+#disable-while-typing=false
+#middle-button-emulation=true
+#left-handed=true
+#rotation=90
+#accel-profile=flat
+#accel-speed=.9
+#natural-scroll=true
+#scroll-method=edge
+# For button-triggered scrolling:
+#scroll-method=button
+#scroll-button=BTN_RIGHT
+
+#[touchpad]
+#constant_accel_factor = 50
+#min_accel_factor = 0.16
+#max_accel_factor = 1.0
+
+#[xwayland]
+#path=/usr/bin/Xwayland
