--- a/recipes-kernel/linux/linux-sti/5.4/b2260.config
+++ b/recipes-kernel/linux/linux-sti/5.4/b2260.config
@@ -48,6 +48,7 @@
 # CONFIG_ARCH_KEYSTONE is not set
 # CONFIG_ARCH_MEDIATEK is not set
 # CONFIG_ARCH_MESON is not set
+# CONFIG_ARCH_MILBEAUT is not set
 # CONFIG_ARCH_MVEBU is not set
 # CONFIG_MACH_ARMADA_370 is not set
 # CONFIG_MACH_ARMADA_375 is not set
